--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -532,20 +532,14 @@ body {
     padding: 0px 0 20px 0px;
     margin: 0px;
     font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #f0e7d5;
+    color: #6D6E71;
     font-weight: normal;
-    background: #252525;
+    background: #FFF url(../images/groovepaper.png) repeat;
     background-attachment: fixed !important;
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #2a2a29), color-stop(100%, #1c1c1c));
-    background: -webkit-linear-gradient(#2a2a29, #1c1c1c);
-    background: -moz-linear-gradient(#2a2a29, #1c1c1c);
-    background: -o-linear-gradient(#2a2a29, #1c1c1c);
-    background: -ms-linear-gradient(#2a2a29, #1c1c1c);
-    background: linear-gradient(#2a2a29, #1c1c1c);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #e8e8e8;
+    color: #008FAC;
     margin: 0 0 10px;
     font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
@@ -568,7 +562,7 @@ h2 {
 }
 
 h4, h5, h6 {
-    color: #e8e8e8;
+    color: #5f5f5f;
 }
 
 h3 {
@@ -576,17 +570,17 @@ h3 {
     line-height: 24px;
     font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     font-weight: normal;
-    color: #b6b6b6;
+    color: #5f5f5f;
 }
 
 a {
-    color: #ffcc00;
+    color: #E44D26;
     font-weight: 400;
     text-decoration: none;
 }
 
 a:hover {
-    color: #ffeb9b;
+    color: #E44D26;
 }
 
 a small {
@@ -617,15 +611,13 @@ section img {
 }
 
 blockquote {
-    border-left: 3px solid #ffcc00;
+    border-left: 3px solid #E44D26;
     margin: 0;
     padding: 0 0 0 20px;
     font-style: italic;
 }
 
 code {
-    font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-    color: #efefef;
     font-size: 13px;
     margin: 0 4px;
     padding: 4px 6px;
@@ -638,26 +630,26 @@ code {
 }
 
 pre {
-    padding: 8px 15px;
-    background: #191919;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -o-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -khtml-border-radius: 2px;
-    border-radius: 2px;
-    border: 1px solid #121212;
-    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
-    -o-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+    margin-top: 1em;
+    text-align: left;
     overflow: auto;
-    overflow-y: hidden;
+    width: auto;
+    color: #000;
+    background: none repeat scroll 0% 0% #FFF;
+    border-style: solid;
+    border-color: #808080;
+    -moz-border-top-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    border-image: none;
+    border-width: 0.1em 0.1em 0.1em 0.8em;
+    padding: 0.2em 0.6em;
+    font-family: monospace,serif;
 }
 
 pre code {
-    color: #efefef;
-    text-shadow: 0px 1px 0px #000;
+    color: #2f2f2f;
     margin: 0;
     padding: 0;
 }
@@ -703,7 +695,7 @@ dt {
     height: 60px;
     width: 100%;
     position: fixed;
-    background: url(../images/nav-bg.gif) #353535;
+    background: #01414E;;
     border-bottom: 4px solid #434343;
     -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
@@ -732,13 +724,13 @@ dt {
 
 #header nav li a {
     color: white;
-    border: 1px solid #5d910b;
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #93bd20), color-stop(100%, #659e10));
-    background: -webkit-linear-gradient(#93bd20, #659e10);
-    background: -moz-linear-gradient(#93bd20, #659e10);
-    background: -o-linear-gradient(#93bd20, #659e10);
-    background: -ms-linear-gradient(#93bd20, #659e10);
-    background: linear-gradient(#93bd20, #659e10);
+    border: 1px solid #E44D26;
+    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #E44D26), color-stop(100%, #E44D26));
+    background: -webkit-linear-gradient(#E44D26, #E44D26);
+    background: -moz-linear-gradient(#E44D26, #E44D26);
+    background: -o-linear-gradient(#E44D26, #E44D26);
+    background: -ms-linear-gradient(#E44D26, #E44D26);
+    background: linear-gradient(#E44D26, #E44D26);
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     -o-border-radius: 2px;
@@ -759,14 +751,14 @@ dt {
 }
 
 #header nav li a:hover {
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #749619), color-stop(100%, #527f0e));
-    background: -webkit-linear-gradient(#749619, #527f0e);
-    background: -moz-linear-gradient(#749619, #527f0e);
-    background: -o-linear-gradient(#749619, #527f0e);
-    background: -ms-linear-gradient(#749619, #527f0e);
-    background: linear-gradient(#749619, #527f0e);
-    background-color: #659e10;
-    border: 1px solid #527f0e;
+    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #E44D26), color-stop(100%, #E44D26));
+    background: -webkit-linear-gradient(#E44D26, #E44D26);
+    background: -moz-linear-gradient(#E44D26, #E44D26);
+    background: -o-linear-gradient(#E44D26, #E44D26);
+    background: -ms-linear-gradient(#E44D26, #E44D26);
+    background: linear-gradient(#E44D26, #E44D26);
+    background-color: #E44D26;
+    border: 1px solid #E44D26;
     -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
     -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
     -o-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
@@ -812,7 +804,7 @@ section #title h1 {
 }
 
 section #title p {
-    color: #d7cfbe;
+    color: #58595B;
     font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
     font-size: 18px;
