--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -745,6 +745,7 @@ dt {
     padding: 10px 12px;
     margin-top: 6px;
     line-height: 14px;
+    font-family: "OpenSansMedium","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
     display: inline-block;
     text-align: center;
